--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ MarkupSafe==2.1.2
 matplotlib-inline==0.1.7
 mdit-py-plugins==0.4.1
 mdurl==0.1.2
+mdx-truly-sane-lists==1.3
 mergedeep==1.3.4
 mistune==3.0.2
 mkdocs==1.4.2
