--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,5 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
-      - run: pip install mkdocs-material mkdocs-git-revision-date-localized-plugin mdx_truly_sane_lists
+      - run: pip install -r requirements.txt
       - run: mkdocs gh-deploy --force --clean --verbose
