--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "workbench.colorTheme": "Solarized Light"
+    "workbench.colorTheme": "Solarized Light",
+    "cSpell.words": [
+        "deprioritised",
+        "EECS",
+        "Ousterhout",
+        "Shachar",
+        "Structur"
+    ]
 }
