--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
     "workbench.colorTheme": "Solarized Light",
     "cSpell.words": [
+        "AMWAA",
         "deprioritised",
         "EECS",
+        "NACL",
         "Ousterhout",
         "Shachar",
-        "Structur"
     ]
 }
